--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<title>Tebby Games</title>
+<link rel="stylesheet" href="style.css">
 <body style="background-color: #0060c0">
 <div style="text-align: center">
 <img src="tebby.svg">
