--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>Tebby Games</title>
-<link rel="icon" href="tebby.svg">
+<link rel="icon" href="favicon.svg">
 <link rel="stylesheet" href="style.css">
 <body style="background-color: #0060c0">
 <div style="text-align: center">
