--- a/index.html
+++ b/index.html
@@ -6,3 +6,7 @@
 <img src="tebby.svg">
 </div>
 <hr>
+<!--Game list starts here -->
+<div style="text-align: center">
+<a href="tebby-jump"><img src="https://tebbygames.github.io/img/tebby-jump.png" width=200></a>
+</div>
