--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <title>Tebby Games</title>
 <link rel="icon" href="favicon.svg">
+<link rel="icon" href="favicon.svg" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.svg">
+<link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 <link rel="stylesheet" href="style.css">
 <body style="background-color: #0060c0">
 <div style="text-align: center">
